chore: tag for release, formatting

--- a/Chart.yaml
+++ b/Chart.yaml
@@ -4,4 +4,4 @@ description: GlueOps Helm Chart to deploy the GlueOps Pull Request Bot
 
 appVersion: v0.5.3
 
-version: 0.1.0-antonio-alpha3
+version: 0.1.0
